# my_irc_c

client/: CMakeLists.txt  main.c  options.h
client/server/: server.c  server.h
client/server/server_list/: server_list.c  server_list.h
client/ui/menu/: menu.c  menu.h
client/ui/utils/: utils.c  utils.h
lib/: globals.h
lib/message/: message.h
lib/user_info/: user_info.c  user_info.h
server/: CMakeLists.txt  main.c
server/channel/: channel.c  channel.h
server/message/: message.c  message.h
